Update to 1.18 + Fix GUI issue